<resources>
    <string name="app_name">L-Pesa</string>
    <string name="facebook_app_id">377266739110350</string>
    <string name="fb_login_protocol_scheme">fb377266739110350</string>
    <string name="starter_loan"> $1 Starter Loan</string>
    <string name="l_pesa_risk_free">The L-Pesa Risk Free</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_using_lpesa">Already using L-Pesa?</string>
    <string name="get_started">Get Started</string>
    <string name="no_country">No country was listed.</string>
    <string name="phone_no">Mobile No.</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="final_step">Final step</string>
    <string name="submit">Submit</string>
    <string name="successful">Successful</string>
    <string name="failure">Failure</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="forgot_pin_title">Forgot PIN</string>
    <string name="change_login_pin">Change Login PIN</string>
    <string name="enter_name">Enter Name</string>
    <string name="verification_code">Verification Code</string>
    <string name="reason_for_account_close">Reason for account close</string>
    <string name="verify">Verify</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="see_you_quality">See if you qualify</string>
    <string name="select">Select</string>
    <string name="registration_step_one">Registration Step One</string>
    <string name="registration_step_two">Registration Step Two</string>
    <string name="registration_step_three">Registration Step Three</string>
    <string name="registration_step_four">Registration Step Four</string>
    <string name="thank_you">Thank you!</string>
    <string name="next">Next</string>
    <string name="continue_">Continue</string>
    <string name="done">Done</string>
    <string name="complete">Complete</string>
    <string name="create_account">Don\'t have an account? Create one!</string>
    <string name="upload_picture">Upload picture &amp; write your name</string>
    <string name="upload_id_picture">Choose your ID type, enter your ID number &amp; upload a photocopy of the ID </string>
    <string name="continue_to_register">Continue to Register</string>
    <string name="refer_to_otp">You should receive an email with Verification Code. Please enter the Verification Code to verify.</string>
    <string name="mobile_verification">Enter your mobile number, email address &amp; Continue. You will receive Verification Code in your email. Confirm the email address belongs to you by entering the Verification Code in next step.</string>
    <string name="register_one_text">You may either want a social registration or enter your email address. If you enter your email address, you will receive a verification code in your email. Confirm that the email address is yours by entering the verification code in the next step.</string>
    <string name="email_verification">Enter your email address and continue. You will receive a verification code in your email. Confirm that the email address belongs to you by entering the code in the next step.</string>
    <string name="email_verification_code">Enter the verification code you have received at your registered email address. If you have not received a code yet, click on resend to get the code.</string>
    <string name="selfie_verification">A selfie - take a photograph of yourself and make sure that your face is clearly visible.</string>
    <string name="email_selfie_verification">Enter your full name and continue. You can also edit your selfie.</string>
    <string name="identity_verification">To complete your registration with L-Pesa, kindly select an ID proof below and enter the ID number. Please keep your selected ID card ready in hand.</string>
    <string name="identity_photo_verification">Take a photograph of your ID and make sure that your personal details are clear and easy to read. Tap on square image box to upload your ID image</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_pin">New Pin</string>
    <string name="pin">Pin</string>
    <string name="pin_change_successfully">Your Pin has been changed successfully.</string>
    <string name="pin_create_successfully">Your Pin has been created successfully.</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="enter_email_or_mobile">Enter mobile number to reset PIN via your registered mobile number.</string>
    <string name="loading">Loading</string>
    <string name="processing">Processing</string>
    <string name="logging_out">Logging out</string>
    <string name="saving">Saving</string>
    <string name="press_again_to_exit">Press back one more time to exit.</string>
    <string name="required_title">Please select the title.</string>
    <string name="required_name">Please enter your name.</string>
    <string name="required_name_f">Please enter your first name.</string>
    <string name="required_name_l">Please enter your last name.</string>
    <string name="required_mother_maiden_name">Please enter your mother\'s maiden name.</string>
    <string name="required_date_of_birth">Please enter the date of birth.</string>
    <string name="required_phone_email">Please enter a valid phone number.</string>
    <string name="required_gender">Please select your gender.</string>
    <string name="required_phone">Please enter valid phone number.</string>
    <string name="required_sim">No SIM card is detected!</string>
    <string name="required_password">Please enter the password.</string>
    <string name="required_pin_code">Please enter a new 6-digit transactional PIN.</string>
    <string name="required_confirm_pin_code">Please re-type your 6-digit PIN.</string>
    <string name="confirm_pin_code_not_match">The new and re-typed PIN does not match.</string>
    <string name="required_current_pin">Please enter your current PIN.</string>
    <string name="required_new_pin">Please enter a new PIN.</string>
    <string name="required_confirm_pin">Please re-type your new PIN.</string>
    <string name="confirm_pin_not_match">The new and re-typed PIN does not match.</string>
    <string name="old_new_password_different">Old and new PIN should be different.</string>
    <string name="six_digit_new_pin_required">6 digit new PIN required.</string>
    <string name="six_digit_verification_code_required">6 digit Verification Code required.</string>
    <string name="required_email">Please enter a valid email address.</string>
    <string name="poor_internet">Poor internet connection!</string>
    <string name="something_went_wrong">Something went wrong, please try after sometime!</string>
    <string name="server_issue">The server didn\'t respond, please try after sometime!</string>
    <string name="pin_change_success">Login PIN has been changed.</string>
    <string name="change_one_info">Nothing to save! You have not yet edited.</string>
    <string name="no_internet">You are not connected to the internet!</string>
    <string name="image_not_found">Image file not found</string>
    <string name="you_have_select_from_date_to_date">Select at least one date to filter.</string>
    <string name="please_wait">Please wait..</string>
    <string name="location_not_available">Unable to get user location. please make sure you enabled gps.</string>
    <string name="no_internet_details">You are not connected to internet, make sure Wi-Fi/Data is on, Airplane mode is off and try again.</string>
    <string name="retry">Retry</string>
    <string name="init">INIT</string>
    <string name="required_street_address">Please enter your street address.</string>
    <string name="required_postal_code">Please enter the postal code.</string>
    <string name="required_city">Please enter the city.</string>
    <string name="required_emp_type">Please mention the type of employment.</string>
    <string name="required_emp_name">Please enter the name of your employer.</string>
    <string name="required_emp_department">Please enter the department you are employed in.</string>
    <string name="required_emp_occupation">Please specify your designation.</string>
    <string name="required_emp_id">Please enter your employee ID.</string>
    <string name="required_emp_city">Please enter the city of employment.</string>
    <string name="required_business_name">Please enter the business name.</string>
    <string name="required_tin_number">Please enter TIN number.</string>
    <string name="required_id_number">Please enter valid ID number.</string>
    <string name="required_id_type">Please select the type of ID.</string>
    <string name="required_verification_code">Please enter the Verification Code.</string>
    <string name="otp_not_match">You entered an incorrect Verification Code.</string>
    <string name="select_your_country">Select your Country / region</string>
    <string name="search_country">Search country / region</string>
    <string name="required_cancellation_reason">Write a reason for the cancellation.</string>
    <string name="required_reason_for_close_account">Required your valid reason.</string>
    <string name="search_result_not_found">We could not find a match!</string>
    <string name="no_result_found">We\'re sorry. We can\'t seem to find any result that match your search.</string>
    <string name="session_time_out"> Your session has timed out, sign-in again to continue.</string>
    <string name="txt_account_close_header"> Wait! Before you close your L-Pesa account, here are some important facts you should note.</string>
    <string name="txt_account_close_one">Closing your L-Pesa account will affect your credit score, taking away all your accumulated credit points. When you choose to re-open your account, you will lose the privileges that come with having an excellent credit score and start from scratch.</string>
    <string name="txt_account_close_two">Once you consider all these points, should you still wish to close your account, click on the “close account” button below. Unfortunately, once you do, you will no longer be able to access the L-Pesa services.</string>
    <string name="txt_account_close_three">If you change your mind, you can re-register for L-Pesa services, and start an account as a new user.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_dashboard">Dashboard</string>
    <string name="nav_item_profile">My Profile</string>
    <string name="nav_item_loan_calculator">Loan Calculator</string>
    <string name="nav_item_loan">Loan</string>
    <string name="nav_item_airtime_credit">Airtime Credit</string>
    <string name="nav_item_investment">Investment</string>
    <string name="nav_item_lpk">LPK DeF</string>
    <string name="nav_item_wallet">Wallet</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="resend_verification">Resend Verification Code</string>
    <string name="choose_type_id">Choose Id Type</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="nav_item_services">Services</string>
    <string name="nav_item_user_permissions">User device data</string>
    <string name="nav_item_buy_credit">Buy Points</string>
</resources>