<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/action_dashboard"
              android:icon="@drawable/ic_dashboard"
              android:title="@string/nav_item_dashboard" />

        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/nav_item_profile" />

        <item
            android:id="@+id/action_loan_calculator"
            android:icon="@drawable/ic_loan_calculator"
            android:title="@string/nav_item_loan_calculator" />

        <item
            android:id="@+id/action_loan"
            android:icon="@drawable/ic_loan_purpose"
            android:title="@string/nav_item_loan" />
        <item
            android:id="@+id/action_points"
            android:icon="@drawable/ic_buy_point_icon"
            android:title="@string/nav_item_buy_credit" />
        <item
            android:id="@+id/action_investment"
            android:icon="@drawable/ic_menu_investment_icon"
            android:title="@string/nav_item_investment" />
        <item
            android:id="@+id/action_lpk"
            android:icon="@drawable/menu_lpk_icon"
            android:title="@string/nav_item_lpk" />
        <item
            android:id="@+id/action_services"
            android:icon="@drawable/ic_delivery_box"
            android:title="@string/nav_item_services" />
        <item
            android:id="@+id/action_wallet"
            android:icon="@drawable/ic_menu_wallet_icon"
            android:title="@string/nav_item_wallet" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/action_dev"
            android:icon="@drawable/ic_dev_options"
            android:title="@string/nav_item_user_permissions" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout_icon"
            android:title="@string/nav_item_logout" />

    </group>


</menu>