<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    >

    <com.app.l_pesa.common.CommonTextRegular
        android:id="@+id/txtInfo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_85sdp"
        android:text="@string/email_verification_code"
        android:textSize="@dimen/_11sdp"
        android:padding="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/dark_text_color"
        android:gravity="center|start"
        android:justificationMode="inter_word"
        app:layout_constraintBottom_toTopOf="@+id/tilVerificationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/tilVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <com.app.l_pesa.common.CommonInputLayout

            style="@style/customInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.app.l_pesa.common.CommonEditTextRegular
                android:id="@+id/etVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/verification_code"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:textColorHint="@color/color_gray_text"
                android:textColor="@color/textColors"
                android:textSize="@dimen/_12sdp" />

        </com.app.l_pesa.common.CommonInputLayout>

    </androidx.core.widget.NestedScrollView>


    <com.app.l_pesa.common.CustomButtonRegular
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/bg_button_app"
        android:text="@string/verify"
        android:textColor="#fff"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilVerificationCode"


        />

    <TextView
        android:id="@+id/txtResend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorAppDeep"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"

        />


</androidx.constraintlayout.widget.ConstraintLayout>