<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_40sdp"
        android:background="@android:color/white"
        >

        <com.app.l_pesa.common.CommonTextRegular
            android:id="@+id/textView27"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/thank_you"
            android:gravity="center"
            android:textColor="@color/color_deep_gold"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:padding="@dimen/_2sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.app.l_pesa.common.CommonTextRegular
            android:id="@+id/textView28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/upload_picture"
            android:textColor="@color/colorTextBlackLight"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            app:layout_constraintBottom_toTopOf="@+id/imgProfilePhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <com.app.l_pesa.common.CircularImageView
            android:id="@+id/imgProfilePhoto"
            android:contentDescription="@string/app_name"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:background="@drawable/ic_user"
            app:civ_border_width="0dp"
            app:civ_background_color="@android:color/white"
            app:civ_border_color="@android:color/white"
            app:civ_shadow="false"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            app:layout_constraintBottom_toTopOf="@+id/etName"

            />


        <com.app.l_pesa.common.CommonEditTextRegular
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/et_bg_white_border_black"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:hint="@string/enter_name"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:longClickable="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:inputType="textCapWords"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorTextBlackLight"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/etOTP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto" />

        <com.app.l_pesa.common.CommonEditTextRegular
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/et_bg_white_border_black"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:hint="@string/enter_otp"
            android:maxLines="1"
            android:maxLength="6"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="numberSigned"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorTextBlackLight"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <com.app.l_pesa.common.CustomButtonRegular
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/yellow_button"
            android:text="@string/final_step"
            android:textColor="@color/colorSemiWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etOTP" />


    </android.support.constraint.ConstraintLayout>

